--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <div class="row">
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
           <div class="col d-flex justify-content-end">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="/index.html">
               <img src="./imagenes/logo.jpg" alt="imagenlogo" width="80" height="80" class="rounded-circle">
             </a>
           </div>
