--- a/pages/menu.html
+++ b/pages/menu.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HOME</title>
+    <title>MENU</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/estilos.css">
@@ -52,7 +52,7 @@
         <div class="container">
             <div class="row">
                 <div class="pricing-header p-3 pb-md-4 mx-auto text-center">
-                    <h1 class="display-4 fw-normal">MENU</h1>
+                    <h1 class="display-5 fw-normal">MENU</h1>
                     <p class="fs-5 text-dark">Elige el que más te gusta y lo llevamos donde estés.</p>
                 </div>
             </div>
@@ -83,7 +83,17 @@
               </div>
             </div>
           </div>
-
+    </section>
+    <section>
+    <article>
+        <div class="containterr">
+          <div class="redes">
+            <a href="https://www.facebook.com/" target="blanc" class="icon-facebook"></a>
+            <a href="https://www.instagram.com/" target="blanc" class="icon-instagram"></a>
+            <a href="https://www.whatsapp.com/" target="blanc" class="icon-whatsapp"></a>
+          </div>
+        </div>
+      </article>
     </section>
     </main>
     <footer">
