--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <div class="row">
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
           <div class="col d-flex justify-content-end">
-            <a class="navbar-brand" href="/index.html">
+            <a class="navbar-brand" href="#">
               <img src="./imagenes/logo.jpg" alt="imagenlogo" width="80" height="80" class="rounded-circle">
             </a>
           </div>
@@ -32,7 +32,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
               <div class="navbar-nav">
-                <a class="nav-link active" aria-current="page" href="/index.html">HOME</a>
+                <a class="nav-link active" aria-current="page" href="#">HOME</a>
                 <a class="nav-link" href="./pages/menu.html">MENU</a>
                 <a class="nav-link" href="./pages/nosotros.html">NOSOTROS</a>
                 <a class="nav-link" href="./pages/media.html">MEDIA</a>
@@ -126,10 +126,10 @@
         </div>
       </div>
     </div>
-  </footer>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
-  </script>
+    </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
+    </script>
 </body>
 
 </html>
