--- a/pages/media.html
+++ b/pages/media.html
@@ -61,18 +61,20 @@
             <div class="container">
                 <div class="row">
                     <div class="card mb-3 p-2 rounded bg-dark bg-gradient">
-                            <iframe class="p-3 videomedia" width="100%" height="315" src="https://www.youtube.com/embed/-5KAN9_CzSA" title="MUSICA" frameborder="0"
-                              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                              allowfullscreen class="video"></iframe>
-                            <iframe class="p-3 videomedia" width="100%" height="315" src="https://www.youtube.com/embed/D1PWXjTDKGE" title="coffe" frameborder="0"
-                              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                              allowfullscreen class="video"></iframe>
-                          </div>
-                        
-                        </div>
-                      </div>
-                </div>    
+                        <iframe class="p-3 videomedia" width="100%" height="315"
+                            src="https://www.youtube.com/embed/-5KAN9_CzSA" title="MUSICA" frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen class="video"></iframe>
+                        <iframe class="p-3 videomedia" width="100%" height="315"
+                            src="https://www.youtube.com/embed/D1PWXjTDKGE" title="coffe" frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen class="video"></iframe>
+                    </div>
+
                 </div>
+            </div>
+            </div>
+            </div>
 
 
         </section>
