--- a/pages/menu.html
+++ b/pages/menu.html
@@ -2,90 +2,100 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MENU</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/estilos.css">
-    <link rel="stylesheet" href="../css/fontello.css">
-    <link rel="shortcut icon" href="../imagenes/logo.jpg">
-    <link rel="stylesheet" type="text/css" href="../css/normalize.css">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>MENU</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <link rel="stylesheet" href="../css/estilos.css">
+  <link rel="stylesheet" href="../css/fontello.css">
+  <link rel="shortcut icon" href="../imagenes/logo.jpg">
+  <link rel="stylesheet" type="text/css" href="../css/normalize.css">
 
 </head>
 
 <body class="bg-secondary bg-gradient">
-    <header>
-        <div class="container-fluid">
-            <div class="row">
-                <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-                    <div class="col d-flex justify-content-end">
-                        <a class="navbar-brand" href="../index.html">
-                            <img src="../imagenes/logo.jpg" alt="imagenlogo" width="80" height="80"
-                                class="rounded-circle">
-                        </a>
-                    </div>
-                    <div class="col">
-                        <button class="navbar-toggler " type="button" data-bs-toggle="collapse"
-                            data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup"
-                            aria-expanded="false" aria-label="Toggle navigation">
-                            <span class="navbar-toggler-icon"></span>
-                        </button>
-                        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                            <div class="navbar-nav">
-                                <a class="nav-link active" aria-current="page" href="">MENU</a>
-                                <a class="nav-link" href="../index.html">HOME</a>
-                                <a class="nav-link" href="nosotros.html">NOSOTROS</a>
-                                <a class="nav-link" href="media.html">MEDIA</a>
-                                <a class="nav-link" href="contacto.html">CONTACTO</a>
-                            </div>
-                        </div>
-                    </div>
-                </nav>
-            </div>
-        </div>
-    </header>
-
-    <main>
-        <section>
-        <div class="container">
-            <div class="row">
-                <div class="pricing-header p-3 pb-md-4 mx-auto text-center">
-                    <h1 class="display-5 fw-normal">MENU</h1>
-                    <p class="fs-5 text-dark">Elige el que más te gusta y lo llevamos donde estés.</p>
-                </div>
-            </div>
-        </div>
-    </section>
-    <section>
-        <div class="card-group">
-            <div class="card">
-              <img src="../imagenes/menu2.jpg" class="card-img-top" alt="...">
-              <div class="card-body">
-                <h5 class="card-title">Opción 1 - Menú ligero</h5>
-                <p class="card-text">Uno de los menús de más éxito de nuestra cafetería. Cualesquiera de nuestros clientes puede elegir una de las cuatro modalidades ofertadas a diario por un coste de 3,00 $. 1/2 tostada de jamón y queso + café o vaso de leche 1/2 tostada de aceite y tomate + batido de coco 1/2 tostada de aceit</p>
-              </div>
-            </div>
-            <div class="card">
-              <img src="../imagenes/menu1.jpg" class="card-img-top" alt="...">
-              <div class="card-body">
-                <h5 class="card-title">Opción 2 - Menú medio</h5>
-                <p class="card-text">Nuestra cafetería es reconocida mundialmente por la extraordinaria calidad de los menús medios ofrecidos. Si pasa por el lugar, no se olvide de probar uno de nuestros riquísimos menús medios. Por el módico precio de 5 $, podrá disfrutar de cualquiera de nuestros menús medios. 1/2 Tostada de tomate + Sandwich de jamón y queso + batido de chocolate o fresa + Zumo de naranja natural en vaso medio Filete de pechuga de pollo + Patatas fritas + Café o Zumo de naranja natural en vaso grande Bacon + Salchichas + Patatas fritas + Café Hamburguesa + Patatas + Refresco.</p>
-              </div>
-
-            </div>
-            <div class="card">
-              <img src="../imagenes/menu3.jpg" class="card-img-top" alt="...">
-              <div class="card-body">
-                <h5 class="card-title">Opción 3 Menú especial</h5>
-                <p class="card-text">Se trata de un menú ideal para personas que vienen a desayunar a nuestro local en compañía de sus parejas o amigos. Solamente por 6,50 $ podrá deleitarse de nuestras extraordinarias ofertas de menú especial para los desayunos. 2 Tostadas gratinadas de jamón y queso + 2 cafés solos o con leche + zumos de naranja natural + batido de chocolate 2 Hamburguesas + 2 raciones de Patatas fritas + 2 Refrescos 2 Bocadillos de jamón y queso o tortilla + cerveza + café + zumo de naranja en estado natural en vaso grande Patatas fritas + Sandwich de tortilla + Hamburguesa de pollo con queso + Café + Resfresco</p>
+  <header>
+    <div class="container-fluid">
+      <div class="row">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+          <div class="col d-flex justify-content-end">
+            <a class="navbar-brand" href="../index.html">
+              <img src="../imagenes/logo.jpg" alt="imagenlogo" width="80" height="80" class="rounded-circle">
+            </a>
+          </div>
+          <div class="col">
+            <button class="navbar-toggler " type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
+              aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+              <div class="navbar-nav">
+                <a class="nav-link active" aria-current="page" href="">MENU</a>
+                <a class="nav-link" href="../index.html">HOME</a>
+                <a class="nav-link" href="nosotros.html">NOSOTROS</a>
+                <a class="nav-link" href="media.html">MEDIA</a>
+                <a class="nav-link" href="contacto.html">CONTACTO</a>
               </div>
             </div>
           </div>
+        </nav>
+      </div>
+    </div>
+  </header>
+
+  <main>
+    <section>
+      <div class="container">
+        <div class="row">
+          <div class="pricing-header p-3 pb-md-4 mx-auto text-center">
+            <h1 class="display-5 fw-normal">MENU</h1>
+            <p class="fs-5 text-dark">Elige el que más te gusta y lo llevamos donde estés.</p>
+          </div>
+        </div>
+      </div>
     </section>
     <section>
-    <article>
+      <div class="card-group">
+        <div class="card">
+          <img src="../imagenes/menu2.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Opción 1 - Menú ligero</h5>
+            <p class="card-text">Uno de los menús de más éxito de nuestra cafetería. Cualesquiera de nuestros clientes
+              puede elegir una de las cuatro modalidades ofertadas a diario por un coste de 3,00 $. 1/2 tostada de jamón
+              y queso + café o vaso de leche 1/2 tostada de aceite y tomate + batido de coco 1/2 tostada de aceit</p>
+          </div>
+        </div>
+        <div class="card">
+          <img src="../imagenes/menu1.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Opción 2 - Menú medio</h5>
+            <p class="card-text">Nuestra cafetería es reconocida mundialmente por la extraordinaria calidad de los menús
+              medios ofrecidos. Si pasa por el lugar, no se olvide de probar uno de nuestros riquísimos menús medios.
+              Por el módico precio de 5 $, podrá disfrutar de cualquiera de nuestros menús medios. 1/2 Tostada de tomate
+              + Sandwich de jamón y queso + batido de chocolate o fresa + Zumo de naranja natural en vaso medio Filete
+              de pechuga de pollo + Patatas fritas + Café o Zumo de naranja natural en vaso grande Bacon + Salchichas +
+              Patatas fritas + Café Hamburguesa + Patatas + Refresco.</p>
+          </div>
+
+        </div>
+        <div class="card">
+          <img src="../imagenes/menu3.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Opción 3 Menú especial</h5>
+            <p class="card-text">Se trata de un menú ideal para personas que vienen a desayunar a nuestro local en
+              compañía de sus parejas o amigos. Solamente por 6,50 $ podrá deleitarse de nuestras extraordinarias
+              ofertas de menú especial para los desayunos. 2 Tostadas gratinadas de jamón y queso + 2 cafés solos o con
+              leche + zumos de naranja natural + batido de chocolate 2 Hamburguesas + 2 raciones de Patatas fritas + 2
+              Refrescos 2 Bocadillos de jamón y queso o tortilla + cerveza + café + zumo de naranja en estado natural en
+              vaso grande Patatas fritas + Sandwich de tortilla + Hamburguesa de pollo con queso + Café + Resfresco</p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section>
+      <article>
         <div class="containterr">
           <div class="redes">
             <a href="https://www.facebook.com/" target="blanc" class="icon-facebook"></a>
@@ -95,8 +105,8 @@
         </div>
       </article>
     </section>
-    </main>
-    <footer">
+  </main>
+  <footer">
     <div class="container-fluid">
       <div class="row">
         <div class="card text-center bg-dark">
@@ -107,10 +117,10 @@
         </div>
       </div>
     </div>
-  </footer>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
-  </script>
-  </body>
+    </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
+    </script>
+</body>
 
-  </html>
+</html>
