--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -63,8 +63,17 @@
                     <div class="card bg-dark text-white">
                         <img src="../imagenes/fotomenu.jpg" class="card-img" alt="...">
                         <div class="card-img-overlay text-center">
-                            <h5 class="card-title text-light bg-dark rounded bg-success p-2 text-light bg-opacity-50">¿Por qué elegirnos?</h5>
-                            <p class="card-text text-light bg-dark rounded bg-success p-2 text-light bg-opacity-50">En Espresso tenemos un compromiso con la calidad, la seguridad y la responsabilidad, que concretamos mediante la implementación de estándares y programas que cumplen con la legislación vigente y requisitos de nuestros clientes. Nos preocupamos por planificar, invertir en recursos materiales y humanos, llevar adelante procedimientos normalizados y monitoreos permanentes, para que su empresa reciba el servicio final que requiere. Cuidamos hasta el más mínimo detalle, desde la selección óptima de nuestros proveedores e insumos hasta la estricta preparación de los productos en las máquinas expendedoras, con el objetivo de que el usuario tenga una opción variada y satisfactoria.</p>
+                            <h5 class="card-title text-light bg-dark rounded bg-success p-2 text-light bg-opacity-50">
+                                ¿Por qué elegirnos?</h5>
+                            <p class="card-text text-light bg-dark rounded bg-success p-2 text-light bg-opacity-50">En
+                                Espresso tenemos un compromiso con la calidad, la seguridad y la responsabilidad, que
+                                concretamos mediante la implementación de estándares y programas que cumplen con la
+                                legislación vigente y requisitos de nuestros clientes. Nos preocupamos por planificar,
+                                invertir en recursos materiales y humanos, llevar adelante procedimientos normalizados y
+                                monitoreos permanentes, para que su empresa reciba el servicio final que requiere.
+                                Cuidamos hasta el más mínimo detalle, desde la selección óptima de nuestros proveedores
+                                e insumos hasta la estricta preparación de los productos en las máquinas expendedoras,
+                                con el objetivo de que el usuario tenga una opción variada y satisfactoria.</p>
                         </div>
                     </div>
                 </div>
