--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -62,8 +62,8 @@
                 <div class="row">
 
                     <div class="form-floating mb-3">
-                        <input type="email" class="form-control" id="floatingInput">
-                        <label for="floatingPassword"><p>Email address</p></label>
+                        <input type="text" class="form-control" id="floatingInput">
+                        <label for="floatingPassword"><p>Nombre</p></label> git
                     </div>
                     <div class="form-floating mb-3">
                         <input type="number" class="form-control" id="floatingInput">
