--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -63,7 +63,7 @@
 
                     <div class="form-floating mb-3">
                         <input type="text" class="form-control" id="floatingInput">
-                        <label for="floatingPassword"><p>Nombre</p></label> git
+                        <label for="floatingPassword"><p>Nombre</p></label> 
                     </div>
                     <div class="form-floating mb-3">
                         <input type="number" class="form-control" id="floatingInput">
