--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -60,28 +60,32 @@
         <section>
             <div class="container">
                 <div class="row">
+                    <div class="card mb-3 p-2 rounded bg-dark bg-gradient">
 
-                    <div class="form-floating mb-3">
-                        <input type="text" class="form-control" id="floatingInput">
-                        <label for="floatingPassword"><p>Nombre</p></label> 
-                    </div>
-                    <div class="form-floating mb-3">
-                        <input type="number" class="form-control" id="floatingInput">
-                        <label for="floatingPassword p-2">Ingresá acá tu Telefono</label>
-                    </div>
-                    <div class="form-floating mb-3">
-                        <input type="email" class="form-control" id="floatingInput">
-                        <label for="floatingPassword">Ingresá acá tu Email</label>
-                    </div>
-                    <div class="form-floating">
-                        <textarea class="form-control" placeholder="Leave a comment here"
-                            id="floatingTextarea"></textarea>
-                        <label for="floatingTextarea">Comments</label>
-                    </div>
-                    <div class="d-grid gap-2 col-6 mx-auto p-3">
-                        <button class="btn btn-primary btn-warning " type="submit">Enviar!</button>
-                      </div>
+                        <div class="form-floating mb-3">
+                            <input type="text" class="form-control" id="floatingInput">
+                            <label for="floatingPassword">
+                                <p>Nombre</p>
+                            </label>
+                        </div>
+                        <div class="form-floating mb-3">
+                            <input type="number" class="form-control" id="floatingInput">
+                            <label for="floatingPassword p-2">Ingresá acá tu Telefono</label>
+                        </div>
+                        <div class="form-floating mb-3">
+                            <input type="email" class="form-control" id="floatingInput">
+                            <label for="floatingPassword">Ingresá acá tu Email</label>
+                        </div>
+                        <div class="form-floating">
+                            <textarea class="form-control" placeholder="Leave a comment here"
+                                id="floatingTextarea"></textarea>
+                            <label for="floatingTextarea">Comments</label>
+                        </div>
+                        <div class="d-grid gap-2 col-6 mx-auto p-3">
+                            <button class="btn btn-primary btn-warning " type="submit">Enviar!</button>
+                        </div>
 
+                    </div>
                 </div>
             </div>
 
