--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
           <div class="col d-flex justify-content-end">
             <a class="navbar-brand" href="#">
-              <img src="./imagenes/logo.jpg" alt="imagenlogo" width="80" height="80" class="rounded-circle">
+              <img src="./imagenes/logo.jpg" alt="imagenlogo" width="80" height="80" class="rounded-circle shadow ">
             </a>
           </div>
           <div class="col">
@@ -88,22 +88,20 @@
       <div class="container">
         <div class="row">
           <div class="card mb-3 bg-secondary bg-gradient text-center">
-            <img src="imagenes/fotomenu.jpg" class="card-img-top rounded mt-3" alt="cafedibujo">
+            <img src="imagenes/fotomenu.jpg" class="card-img-top rounded mt-3 shadow " alt="cafedibujo">
             <div class="card-body">
               <h5 class="card-title">DISFRUTA DEL CAFÉ DEL MUNDO</h5>
               <p class="card-text">Veni a conocernos, disfrutá de la experiencia que tenemos para brindarte. Y llevate a
                 tu casa el mejor café del mundo. Descubrí por qué #SomosCafe</p>
-              <a href="./pages/menu.html" class="btn btn-primary btn-warning">MENU</a>
+              <a href="./pages/menu.html" class="btn btn-primary btn-warning shadow ">MENU</a>
             </div>
           </div>
           <div class="card mb-3 bg-secondary bg-gradient text-center">
             <div class="card-body">
               <h5 class="card-title"></h5>
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
-                content. This content is a little bit longer.</p>
-              <a href="./pages/contacto.html" class="btn btn-primary btn-warning">CONTACTO</a>
+              <a href="./pages/contacto.html" class="btn btn-primary btn-warning shadow ">CONTACTO</a>
             </div>
-            <img src="imagenes/quienes 4.jpg" class="card-img-bottom rounded mb-3" alt="...">
+            <img src="imagenes/quienes 4.jpg" class="card-img-bottom rounded mb-3 shadow " alt="...">
           </div>
         </div>
       </div>
