--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -25,7 +25,7 @@
                     <div class="col d-flex justify-content-end">
                         <a class="navbar-brand" href="../index.html">
                             <img src="../imagenes/logo.jpg" alt="imagenlogo" width="80" height="80"
-                                class="rounded-circle">
+                                class="rounded-circle shadow ">
                         </a>
                     </div>
                     <div class="col">
@@ -64,27 +64,27 @@
                 <div class="row">
                     <div class="card mb-3 p-2 rounded bg-dark bg-gradient">
 
-                        <div class="form-floating mb-3">
+                        <div class="form-floating mb-3 shadow">
                             <input type="text" class="form-control" id="floatingInput">
                             <label for="floatingPassword">
                                 <p>Nombre</p>
                             </label>
                         </div>
-                        <div class="form-floating mb-3">
+                        <div class="form-floating mb-3 shadow">
                             <input type="number" class="form-control" id="floatingInput">
                             <label for="floatingPassword p-2">Ingresá acá tu Telefono</label>
                         </div>
-                        <div class="form-floating mb-3">
+                        <div class="form-floating mb-3 shadow">
                             <input type="email" class="form-control" id="floatingInput">
                             <label for="floatingPassword">Ingresá acá tu Email</label>
                         </div>
-                        <div class="form-floating">
+                        <div class="form-floating mb-3 shadow">
                             <textarea class="form-control" placeholder="Leave a comment here"
                                 id="floatingTextarea"></textarea>
                             <label for="floatingTextarea">Comments</label>
                         </div>
                         <div class="d-grid gap-2 col-6 mx-auto p-3">
-                            <button class="btn btn-primary btn-warning " type="submit">Enviar!</button>
+                            <button class="btn btn-primary btn-warning shadow" type="submit">Enviar!</button>
                         </div>
 
                     </div>
