--- a/pages/media.html
+++ b/pages/media.html
@@ -25,7 +25,7 @@
                     <div class="col d-flex justify-content-end">
                         <a class="navbar-brand" href="../index.html">
                             <img src="../imagenes/logo.jpg" alt="imagenlogo" width="80" height="80"
-                                class="rounded-circle">
+                                class="rounded-circle ">
                         </a>
                     </div>
                     <div class="col">
@@ -85,29 +85,26 @@
                         </div>
                     </div>
                 </section>
-                <div id="galeria" class="container card mb-3 p-2 rounded bg-dark bg-gradient">
+                <div id="galeria" class="container rounded bg-dark bg-gradient  mb-3 ">
                     <div class="row">
                         <div class="col-lg-4">
-                            <img src="../imagenes/menu1.jpg" alt="" class="rounded">
+                            <img src="../imagenes/menu1.jpg" alt="" class="rounded shadow">
                         </div>
                         <div class="col-lg-4">
                             <img src="../imagenes/DALEQUEVA.jpg" alt="" class="rounded shadow">
                         </div>
                         <div class="col-lg-4">
-                            <img src="../imagenes/DALEQUEVA1.jpg" alt="" class="rounded">
+                            <img src="../imagenes/DALEQUEVA1.jpg" alt="" class="rounded shadow" >
                         </div>
                         <div class="col-lg-4">
-                            <img src="../imagenes/DALEQUEVA2.jpg" alt="" class="rounded">
+                            <img src="../imagenes/DALEQUEVA2.jpg" alt="" class="rounded shadow">
                         </div>
                         <div class="col-lg-4">
-                            <img src="../imagenes/menu1.jpg" alt="" class="rounded">
+                            <img src="../imagenes/menu1.jpg" alt="" class="rounded shadow">
                         </div>
                         <div class="col-lg-4">
-                            <img src="../imagenes/DALEQUEVA.jpg" alt="" class="rounded">
+                            <img src="../imagenes/DALEQUEVA.jpg" alt="" class="rounded shadow">
                         </div>
-                        <div class="col-lg-4">
-
-                    </div>
 
             </section>
 
