--- a/pages/menu.html
+++ b/pages/menu.html
@@ -24,7 +24,7 @@
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
           <div class="col d-flex justify-content-end">
             <a class="navbar-brand" href="../index.html">
-              <img src="../imagenes/logo.jpg" alt="imagenlogo" width="80" height="80" class="rounded-circle">
+              <img src="../imagenes/logo.jpg" alt="imagenlogo" width="80" height="80" class="rounded-circle shadow ">
             </a>
           </div>
           <div class="col">
@@ -62,8 +62,8 @@
       <div class="card-group">
         <div class="card">
           <img src="../imagenes/menu2.jpg" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Opción 1 - Menú ligero</h5>
+          <div class="card-body shadow">
+            <h5 class="card-title ">Opción 1 - Menú ligero</h5>
             <p class="card-text">Uno de los menús de más éxito de nuestra cafetería. Cualesquiera de nuestros clientes
               puede elegir una de las cuatro modalidades ofertadas a diario por un coste de 3,00 $. 1/2 tostada de jamón
               y queso + café o vaso de leche 1/2 tostada de aceite y tomate + batido de coco 1/2 tostada de aceit</p>
@@ -71,8 +71,8 @@
         </div>
         <div class="card">
           <img src="../imagenes/menu1.jpg" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Opción 2 - Menú medio</h5>
+          <div class="card-body shadow ">
+            <h5 class="card-title ">Opción 2 - Menú medio</h5>
             <p class="card-text">Nuestra cafetería es reconocida mundialmente por la extraordinaria calidad de los menús
               medios ofrecidos. Si pasa por el lugar, no se olvide de probar uno de nuestros riquísimos menús medios.
               Por el módico precio de 5 $, podrá disfrutar de cualquiera de nuestros menús medios. 1/2 Tostada de tomate
@@ -84,8 +84,8 @@
         </div>
         <div class="card">
           <img src="../imagenes/menu3.jpg" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Opción 3 Menú especial</h5>
+          <div class="card-body shadow ">
+            <h5 class="card-title ">Opción 3 Menú especial</h5>
             <p class="card-text">Se trata de un menú ideal para personas que vienen a desayunar a nuestro local en
               compañía de sus parejas o amigos. Solamente por 6,50 $ podrá deleitarse de nuestras extraordinarias
               ofertas de menú especial para los desayunos. 2 Tostadas gratinadas de jamón y queso + 2 cafés solos o con
