--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -25,7 +25,7 @@
                     <div class="col d-flex justify-content-end">
                         <a class="navbar-brand" href="../index.html">
                             <img src="../imagenes/logo.jpg" alt="imagenlogo" width="80" height="80"
-                                class="rounded-circle">
+                                class="rounded-circle shadow ">
                         </a>
                     </div>
                     <div class="col">
@@ -65,9 +65,9 @@
                     <div class="card bg-dark text-white">
                         <img src="../imagenes/fotomenu.jpg" class="card-img" alt="...">
                         <div class="card-img-overlay text-center">
-                            <h5 class="card-title text-light bg-dark rounded bg-success p-2 text-light bg-opacity-75">
+                            <h5 class="card-title text-light bg-dark rounded bg-success p-2 text-light bg-opacity-75 shadow">
                                 ¿Por qué elegirnos?</h5>
-                            <p class="card-text text-light bg-dark rounded bg-success p-2 text-light bg-opacity-75">En
+                            <p class="card-text text-light bg-dark rounded bg-success p-2 text-light bg-opacity-75 shadow">En
                                 Espresso tenemos un compromiso con la calidad, la seguridad y la responsabilidad, que
                                 concretamos mediante la implementación de estándares y programas que cumplen con la
                                 legislación vigente y requisitos de nuestros clientes. Nos preocupamos por planificar,
