--- a/pages/menu.html
+++ b/pages/menu.html
@@ -53,45 +53,57 @@
         <div class="row">
           <div class="pricing-header p-3 pb-md-4 mx-auto text-center">
             <h1 class="display-5 fw-normal">MENU</h1>
-            <p class="fs-5 text-dark">Elige el que más te gusta y lo llevamos donde estés.</p>
+            <p class="fs-5 text-dark destacado">Elige el que más te gusta y lo llevamos donde estés.</p>
           </div>
         </div>
       </div>
     </section>
     <section>
-      <div class="card-group">
-        <div class="card">
-          <img src="../imagenes/menu2.jpg" class="card-img-top" alt="...">
-          <div class="card-body shadow">
-            <h5 class="card-title ">Opción 1 - Menú ligero</h5>
-            <p class="card-text">Uno de los menús de más éxito de nuestra cafetería. Cualesquiera de nuestros clientes
-              puede elegir una de las cuatro modalidades ofertadas a diario por un coste de 3,00 $. 1/2 tostada de jamón
-              y queso + café o vaso de leche 1/2 tostada de aceite y tomate + batido de coco 1/2 tostada de aceit</p>
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-4">
+            <img src="../imagenes/menu2.jpg" class="card-img-top" alt="...">
+            <div class="card-body shadow bg-light">
+              <h5 class="card-title text-center destacado">Opción 1 - Menú ligero</h5>
+              <p class="card-text ">Uno de los menús de más éxito de nuestra cafetería. Cualesquiera de nuestros
+                clientes
+                puede elegir una de las cuatro modalidades ofertadas a diario por un coste de 3,00 $. 1/2 tostada de
+                jamón
+                y queso + café o vaso de leche 1/2 tostada de aceite y tomate + batido de coco 1/2 tostada de aceit
+              </p>
+            </div>
           </div>
-        </div>
-        <div class="card">
-          <img src="../imagenes/menu1.jpg" class="card-img-top" alt="...">
-          <div class="card-body shadow ">
-            <h5 class="card-title ">Opción 2 - Menú medio</h5>
-            <p class="card-text">Nuestra cafetería es reconocida mundialmente por la extraordinaria calidad de los menús
-              medios ofrecidos. Si pasa por el lugar, no se olvide de probar uno de nuestros riquísimos menús medios.
-              Por el módico precio de 5 $, podrá disfrutar de cualquiera de nuestros menús medios. 1/2 Tostada de tomate
-              + Sandwich de jamón y queso + batido de chocolate o fresa + Zumo de naranja natural en vaso medio Filete
-              de pechuga de pollo + Patatas fritas + Café o Zumo de naranja natural en vaso grande Bacon + Salchichas +
-              Patatas fritas + Café Hamburguesa + Patatas + Refresco.</p>
+          <div class="col-sm-4">
+            <img src="../imagenes/menu1.jpg" class="card-img-top" alt="...">
+            <div class="card-body shadow bg-light ">
+              <h5 class="card-title text-center destacado ">Opción 2 - Menú medio</h5>
+              <p class="card-text">Nuestra cafetería es reconocida mundialmente por la extraordinaria calidad de los
+                menús
+                medios ofrecidos. Si pasa por el lugar, no se olvide de probar uno de nuestros riquísimos menús
+                medios.
+                Por el módico precio de 5 $, podrá disfrutar de cualquiera de nuestros menús medios. 1/2 Tostada de
+                tomate
+                + Sandwich de jamón y queso + batido de chocolate o fresa + Zumo de naranja natural en vaso medio
+                Filete
+                de pechuga de pollo + Patatas fritas + Café o Zumo de naranja natural en vaso grande Bacon +
+                Salchichas +
+                Patatas fritas + Café Hamburguesa + Patatas + Refresco.</p>
+            </div>
           </div>
-
-        </div>
-        <div class="card">
-          <img src="../imagenes/menu3.jpg" class="card-img-top" alt="...">
-          <div class="card-body shadow ">
-            <h5 class="card-title ">Opción 3 Menú especial</h5>
-            <p class="card-text">Se trata de un menú ideal para personas que vienen a desayunar a nuestro local en
-              compañía de sus parejas o amigos. Solamente por 6,50 $ podrá deleitarse de nuestras extraordinarias
-              ofertas de menú especial para los desayunos. 2 Tostadas gratinadas de jamón y queso + 2 cafés solos o con
-              leche + zumos de naranja natural + batido de chocolate 2 Hamburguesas + 2 raciones de Patatas fritas + 2
-              Refrescos 2 Bocadillos de jamón y queso o tortilla + cerveza + café + zumo de naranja en estado natural en
-              vaso grande Patatas fritas + Sandwich de tortilla + Hamburguesa de pollo con queso + Café + Resfresco</p>
+          <div class="col-sm-4">
+            <img src="../imagenes/menu3.jpg" class="card-img-top" alt="...">
+            <div class="card-body shadow bg-light ">
+              <h5 class="card-title text-center destacado">Opción 3 Menú especial</h5>
+              <p class="card-text">Se trata de un menú ideal para personas que vienen a desayunar a nuestro local en
+                compañía de sus parejas o amigos. Solamente por 6,50 $ podrá deleitarse de nuestras extraordinarias
+                ofertas de menú especial para los desayunos. 2 Tostadas gratinadas de jamón y queso + 2 cafés solos o
+                con
+                leche + zumos de naranja natural + batido de chocolate 2 Hamburguesas + 2 raciones de Patatas fritas + 2
+                Refrescos 2 Bocadillos de jamón y queso o tortilla + cerveza + café + zumo de naranja en estado natural
+                en
+                vaso grande Patatas fritas + Sandwich de tortilla + Hamburguesa de pollo con queso + Café + Resfresco
+              </p>
+            </div>
           </div>
         </div>
       </div>
@@ -109,7 +121,7 @@
     </section>
   </main>
   <footer">
-    <div class="container-fluid">
+    <div class="container-fluid mt-4">
       <div class="row">
         <div class="card text-center bg-dark">
           <div class="card-body">
