--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -19,7 +19,7 @@
 
 <body class="bg-secondary bg-gradient">
     <header>
-        <div class="container-fluid">
+        <div class="container-fluid container-xxl">
             <div class="row">
                 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
                     <div class="col d-flex justify-content-end">
