--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>HOME</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-  <link rel="stylesheet" href="./css/estilos.css">
+  <link rel="stylesheet" href="./scss/estilos.css">
   <link rel="stylesheet" href="./css/fontello.css">
   <link rel="shortcut icon" href="./imagenes/logo.jpg">
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -20,7 +20,7 @@
 
 <body class="bg-dark">
   <header>
-    <div class="container-fluid">
+    <div class="container-fluid container-xxl">
       <div class="row">
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
           <div class="col d-flex justify-content-end">
@@ -87,24 +87,25 @@
     <section class="container-fluid mt-3  ">
       <div class="container">
         <div class="row">
-          <div class="card mb-3 bg-secondary bg-gradient text-center">
-            <img src="imagenes/fotomenu.jpg" class="card-img-top rounded mt-3 shadow " alt="cafedibujo">
-            <div class="card-body">
-              <h5 class="card-title">DISFRUTA DEL CAFÉ DEL MUNDO</h5>
-              <p class="card-text">Veni a conocernos, disfrutá de la experiencia que tenemos para brindarte. Y llevate a
-                tu casa el mejor café del mundo. Descubrí por qué #SomosCafe</p>
-              <a href="./pages/menu.html" class="btn btn-primary btn-warning shadow ">MENU</a>
+            <div class="col-sm mb-3 bg-secondary bg-gradient text-center">
+              <img src="imagenes/fotomenu.jpg" class="card-img-top rounded mt-5 shadow" alt="cafedibujo">
+              <div class="card-body">
+                <h5 class="card-title destacado " >DISFRUTA DEL CAFÉ DEL MUNDO</h5>
+                <p class="card-text">Veni a conocernos, disfrutá de la experiencia que tenemos para brindarte. Y llevate
+                  a
+                  tu casa el mejor café del mundo. Descubrí por qué #SomosCafe</p>
+                <a href="./pages/menu.html" class="btn btn-primary btn-warning shadow destacado">MENU</a>
+              </div>
             </div>
-          </div>
-          <div class="card mb-3 bg-secondary bg-gradient text-center">
-            <div class="card-body">
-              <h5 class="card-title"></h5>
-              <a href="./pages/contacto.html" class="btn btn-primary btn-warning shadow ">CONTACTO</a>
+            <div class="col-sm mb-3 bg-secondary bg-gradient text-center">
+              <div class="card-body">
+                <h5 class="card-title"></h5>
+                <a href="./pages/contacto.html" class="btn btn-primary btn-warning shadow destacado">CONTACTO</a>
+              </div>
+              <img src="imagenes/quienes 4.jpg" class="card-img-bottom rounded mb-3 shadow " alt="...">
             </div>
-            <img src="imagenes/quienes 4.jpg" class="card-img-bottom rounded mb-3 shadow " alt="...">
           </div>
         </div>
-      </div>
     </section>
     <article>
       <div class="containterr">
