--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <link rel="shortcut icon" href="./imagenes/logo.jpg">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300&family=Open+Sans:wght@300&display=swap" rel="stylesheet">
 
 
 </head>
@@ -34,7 +34,7 @@
               <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-              <div class="navbar-nav">
+              <div class="navbar-nav destacado">
                 <a class="nav-link active" aria-current="page" href="#">HOME</a>
                 <a class="nav-link" href="./pages/menu.html">MENU</a>
                 <a class="nav-link" href="./pages/nosotros.html">NOSOTROS</a>
@@ -94,13 +94,13 @@
                 <p class="card-text">Veni a conocernos, disfrutá de la experiencia que tenemos para brindarte. Y llevate
                   a
                   tu casa el mejor café del mundo. Descubrí por qué #SomosCafe</p>
-                <a href="./pages/menu.html" class="btn btn-primary btn-warning shadow destacado">MENU</a>
+                <a href="./pages/menu.html" class="btn btn-primary btn-lg btn-warning shadow destacado">MENU</a>
               </div>
             </div>
             <div class="col-sm mb-3 bg-secondary bg-gradient text-center">
               <div class="card-body">
                 <h5 class="card-title"></h5>
-                <a href="./pages/contacto.html" class="btn btn-primary btn-warning shadow destacado">CONTACTO</a>
+                <a href="./pages/contacto.html" class="btn btn-primary btn-lg btn-warning shadow destacado">CONTACTO</a>
               </div>
               <img src="imagenes/quienes 4.jpg" class="card-img-bottom rounded mb-3 shadow " alt="...">
             </div>
