--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>HOME</title>
+  <title>THE COFFE HOUSE - Venta de Cafe</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <link rel="stylesheet" href="./scss/estilos.css">
@@ -14,6 +14,8 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300&family=Open+Sans:wght@300&display=swap" rel="stylesheet">
+  <meta name="descripcion" content="conoce el mejor cafe del mundo">
+  <meta name="keywords" content="cafe, comprar cafe, el mejor cafe del mundo, cafe argentina, venta de cafe">
 
 
 </head>
@@ -61,13 +63,13 @@
           </div>
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="imagenes/DALEQUEVA.jpg" class="d-block w-100" alt="...">
+              <img src="imagenes/DALEQUEVA.jpg" class="d-block w-100" alt="cafes">
             </div>
             <div class="carousel-item">
-              <img src="imagenes/DALEQUEVA1.jpg" class="d-block w-100" alt="...">
+              <img src="imagenes/DALEQUEVA1.jpg" class="d-block w-100" alt="sirviendocafe">
             </div>
             <div class="carousel-item">
-              <img src="imagenes/DALEQUEVA2.jpg" class="d-block w-100" alt="...">
+              <img src="imagenes/DALEQUEVA2-min.jpg" class="d-block w-100" alt="dibujoscafe">
             </div>
           </div>
           <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
