cambios de home

--- a/index.html
+++ b/index.html
@@ -50,6 +50,15 @@
     </div>
   </header>
   <main>
+    <section>
+      <div class="container">
+          <div class="row">
+              <div class="pricing-header p-3 pb-md-4 mx-auto text-center">
+                  <h1 class="display-5 fw-normal text-light">THE COFFE HOUSE</h1>
+              </div>
+          </div>
+      </div>
+  </section>
     <section class="cotainer">
       <div class="row">
         <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
