--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
 
 </head>
 
-<body class="bg-dark">
+<body class="bg-secondary">
   <header>
-    <div class="container-fluid container-xxl">
+    <div class="container-fluid">
       <div class="row">
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
           <div class="col d-flex justify-content-end">
@@ -50,11 +50,11 @@
     </div>
   </header>
   <main>
-    <section>
-      <div class="container">
+    <section class="bg-secondary">
+      <div class="container-fluid">
           <div class="row">
               <div class="pricing-header p-3 pb-md-4 mx-auto text-center">
-                  <h1 class="display-5 fw-normal text-light">THE COFFE HOUSE</h1>
+                  <h1 class="display-5 fw-normal text-dark">THE COFFE HOUSE</h1>
               </div>
           </div>
       </div>
@@ -95,20 +95,20 @@
       </div>
     </section>
 
-    <section class="container-fluid mt-3  ">
+    <section class="container-fluid mt-3">
       <div class="container">
         <div class="row">
-            <div class="col-sm mb-3 bg-secondary bg-gradient text-center">
+            <div class="col-sm mb-3 bg-dark bg-gradient text-center">
               <img src="imagenes/fotomenu.jpg" class="card-img-top rounded mt-5 shadow" alt="cafedibujo">
               <div class="card-body">
-                <h5 class="card-title destacado " >DISFRUTA DEL CAFÉ DEL MUNDO</h5>
-                <p class="card-text">Veni a conocernos, disfrutá de la experiencia que tenemos para brindarte. Y llevate
+                <h5 class="card-title destacado text-light" >DISFRUTA DEL CAFÉ DEL MUNDO</h5>
+                <p class="card-text text-light">Veni a conocernos, disfrutá de la experiencia que tenemos para brindarte. Y llevate
                   a
                   tu casa el mejor café del mundo. Descubrí por qué #SomosCafe</p>
                 <a href="./pages/menu.html" class="btn btn-primary btn-lg btn-warning shadow destacado">MENU</a>
               </div>
             </div>
-            <div class="col-sm mb-3 bg-secondary bg-gradient text-center">
+            <div class="col-sm mb-3 bg-dark bg-gradient text-center">
               <div class="card-body">
                 <h5 class="card-title"></h5>
                 <a href="./pages/contacto.html" class="btn btn-primary btn-lg btn-warning shadow destacado">CONTACTO</a>
