--- a/pages/menu.html
+++ b/pages/menu.html
@@ -8,12 +8,12 @@
   <title>THE COFFE HOUSE - Venta de Cafe - MENU</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-  <link rel="stylesheet" href="../css/estilos.css">
-  <link rel="stylesheet" href="../css/fontello.css">
-  <link rel="shortcut icon" href="../imagenes/logo.jpg">
+  <link rel="stylesheet" href="../scss/estilos.css">
+  <link rel="stylesheet" href="./css/fontello.css">
+  <link rel="shortcut icon" href="./imagenes/logo.jpg">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300&family=Open+Sans:wght@300&display=swap" rel="stylesheet">
   <meta name="descripcion" content="conoce el mejor cafe del mundo">
   <meta name="keywords" content="cafe, comprar cafe, el mejor cafe del mundo, cafe argentina, venta de cafe">
 
@@ -36,8 +36,8 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
               <div class="navbar-nav">
-                <a class="nav-link active" aria-current="page" href="">MENU</a>
                 <a class="nav-link" href="../index.html">HOME</a>
+                <a class="nav-link active" href="#">MENU</a>
                 <a class="nav-link" href="nosotros.html">NOSOTROS</a>
                 <a class="nav-link" href="media.html">MEDIA</a>
                 <a class="nav-link" href="contacto.html">CONTACTO</a>
