--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -8,7 +8,7 @@
     <title>THE COFFE HOUSE - NOSOTROS</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/estilos.css">
+    <link rel="stylesheet" href="../scss/estilos.css">
     <link rel="stylesheet" href="../css/fontello.css">
     <link rel="shortcut icon" href="../imagenes/logo.jpg">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -21,7 +21,7 @@
 
 <body class="bg-secondary bg-gradient">
     <header>
-        <div class="container-fluid container-xxl">
+        <div class="container-fluid">
             <div class="row">
                 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
                     <div class="col d-flex justify-content-end">
@@ -38,9 +38,9 @@
                         </button>
                         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                             <div class="navbar-nav">
-                                <a class="nav-link active" aria-current="page" href="">NOSOTROS</a>
                                 <a class="nav-link" href="../index.html">HOME</a>
                                 <a class="nav-link" href="menu.html">MENU</a>
+                                <a class="nav-link active" href="#">NOSOTROS</a>
                                 <a class="nav-link" href="media.html">MEDIA</a>
                                 <a class="nav-link" href="contacto.html">CONTACTO</a>
                             </div>
