--- a/pages/menu.html
+++ b/pages/menu.html
@@ -13,7 +13,8 @@
   <link rel="shortcut icon" href="./imagenes/logo.jpg">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300&family=Open+Sans:wght@300&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300&family=Open+Sans:wght@300&display=swap"
+    rel="stylesheet">
   <meta name="descripcion" content="conoce el mejor cafe del mundo">
   <meta name="keywords" content="cafe, comprar cafe, el mejor cafe del mundo, cafe argentina, venta de cafe">
 
