--- a/pages/media.html
+++ b/pages/media.html
@@ -7,16 +7,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>THE COFFE HOUSE - MEDIA</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-  <link rel="stylesheet" href="../scss/estilos.css">
-  <link rel="stylesheet" href="./css/fontello.css">
-  <link rel="shortcut icon" href="./imagenes/logo.jpg">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300&family=Open+Sans:wght@300&display=swap" rel="stylesheet">
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="../scss/estilos.css">
+    <link rel="stylesheet" href="./css/fontello.css">
+    <link rel="shortcut icon" href="./imagenes/logo.jpg">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300&family=Open+Sans:wght@300&display=swap"
+        rel="stylesheet">
     <meta name="descripcion" content="conoce el mejor cafe del mundo">
     <meta name="keywords" content="cafe, comprar cafe, el mejor cafe del mundo, cafe argentina, venta de cafe">
-  
+
 </head>
 
 <body class="bg-secondary bg-gradient">
@@ -96,7 +97,7 @@
                             <img src="../imagenes/DALEQUEVA.jpg" alt="" class="rounded shadow">
                         </div>
                         <div class="col-lg-4">
-                            <img src="../imagenes/DALEQUEVA1.jpg" alt="" class="rounded shadow" >
+                            <img src="../imagenes/DALEQUEVA1.jpg" alt="" class="rounded shadow">
                         </div>
                         <div class="col-lg-4">
                             <img src="../imagenes/DALEQUEVA2.jpg" alt="" class="rounded shadow">
