--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -5,18 +5,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>THE COFFE HOUSE - NOSOTROS</title>
+    <title>THE COFFE HOUSE - Venta de Cafe - MENU</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="../scss/estilos.css">
-    <link rel="stylesheet" href="../css/fontello.css">
-    <link rel="shortcut icon" href="../imagenes/logo.jpg">
+    <link rel="stylesheet" href="./css/fontello.css">
+    <link rel="shortcut icon" href="./imagenes/logo.jpg">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300&family=Open+Sans:wght@300&display=swap"
+        rel="stylesheet">
     <meta name="descripcion" content="conoce el mejor cafe del mundo">
     <meta name="keywords" content="cafe, comprar cafe, el mejor cafe del mundo, cafe argentina, venta de cafe">
-  
+
 </head>
 
 <body class="bg-secondary bg-gradient">
@@ -67,14 +68,19 @@
                     <div class="card bg-dark text-white">
                         <img src="../imagenes/fotomenu.jpg" class="card-img" alt="...">
                         <div class="card-img-overlay text-center">
-                            <h5 class="card-title text-light bg-dark rounded bg-success p-2 text-light bg-opacity-75 shadow">
+                            <h5
+                                class="card-title text-light bg-dark rounded bg-success p-2 text-light bg-opacity-75 shadow">
                                 ¿Por qué elegirnos?</h5>
-                            <p class="card-text text-light bg-dark rounded bg-success p-2 text-light bg-opacity-75 shadow">En
+                            <p
+                                class="card-text text-light bg-dark rounded bg-success p-2 text-light bg-opacity-75 shadow">
+                                En
                                 Espresso tenemos un compromiso con la calidad, la seguridad y la responsabilidad, que
                                 concretamos mediante la implementación de estándares y programas que cumplen con la
                                 legislación vigente y requisitos de nuestros clientes. Nos preocupamos por planificar,
-                                invertir en <span class="destacado"> materiales y humanos, llevar adelante procedimientos normalizados y
-                                monitoreos permanentes, para que su empresa reciba el servicio final que requiere.</span>
+                                invertir en <span class="destacado"> materiales y humanos, llevar adelante
+                                    procedimientos normalizados y
+                                    monitoreos permanentes, para que su empresa reciba el servicio final que
+                                    requiere.</span>
                                 Cuidamos hasta el más mínimo detalle, desde la selección óptima de nuestros proveedores
                                 e insumos hasta la estricta preparación de los productos en las máquinas expendedoras,
                                 con el objetivo de que el usuario tenga una opción variada y satisfactoria.</p>
