--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
   <link rel="shortcut icon" href="./imagenes/logo.jpg">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300&family=Open+Sans:wght@300&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300&family=Open+Sans:wght@300&display=swap"
+    rel="stylesheet">
   <meta name="descripcion" content="conoce el mejor cafe del mundo">
   <meta name="keywords" content="cafe, comprar cafe, el mejor cafe del mundo, cafe argentina, venta de cafe">
 
@@ -52,71 +53,70 @@
   <main>
     <section class="bg-secondary">
       <div class="container-fluid">
-          <div class="row">
-              <div class="pricing-header p-3 pb-md-4 mx-auto text-center">
-                  <h1 class="display-5 fw-normal text-dark">THE COFFE HOUSE</h1>
-              </div>
+        <div class="row">
+          <div class="pricing-header p-3 pb-md-4 mx-auto text-center">
+            <h1 class="display-5 fw-normal text-dark">THE COFFE HOUSE</h1>
           </div>
-      </div>
-  </section>
-    <section class="cotainer">
-      <div class="row">
-        <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
-          <div class="carousel-indicators">
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
-              aria-current="true" aria-label="Slide 1"></button>
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
-              aria-label="Slide 2"></button>
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
-              aria-label="Slide 3"></button>
-          </div>
-          <div class="carousel-inner">
-            <div class="carousel-item active">
-              <img src="imagenes/DALEQUEVA.jpg" class="d-block w-100" alt="cafes">
-            </div>
-            <div class="carousel-item">
-              <img src="imagenes/DALEQUEVA1.jpg" class="d-block w-100" alt="sirviendocafe">
-            </div>
-            <div class="carousel-item">
-              <img src="imagenes/DALEQUEVA2-min.jpg" class="d-block w-100" alt="dibujoscafe">
-            </div>
-          </div>
-          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
-            data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-          </button>
-          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
-            data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-          </button>
         </div>
+      </div>
+    </section>
+    <section>
+      <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-indicators">
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
+            aria-current="true" aria-label="Slide 1"></button>
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+            aria-label="Slide 2"></button>
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+            aria-label="Slide 3"></button>
+        </div>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="imagenes/DALEQUEVA.jpg" class="d-block w-100" alt="cafes">
+          </div>
+          <div class="carousel-item">
+            <img src="imagenes/DALEQUEVA1.jpg" class="d-block w-100" alt="sirviendocafe">
+          </div>
+          <div class="carousel-item">
+            <img src="imagenes/DALEQUEVA2-min.jpg" class="d-block w-100" alt="dibujoscafe">
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+          data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+          data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
       </div>
     </section>
 
     <section class="container-fluid mt-3">
       <div class="container">
         <div class="row">
-            <div class="col-sm mb-3 bg-dark bg-gradient text-center">
-              <img src="imagenes/fotomenu.jpg" class="card-img-top rounded mt-5 shadow" alt="cafedibujo">
-              <div class="card-body">
-                <h5 class="card-title destacado text-light" >DISFRUTA DEL CAFÉ DEL MUNDO</h5>
-                <p class="card-text text-light">Veni a conocernos, disfrutá de la experiencia que tenemos para brindarte. Y llevate
-                  a
-                  tu casa el mejor café del mundo. Descubrí por qué #SomosCafe</p>
-                <a href="./pages/menu.html" class="btn btn-primary btn-lg btn-warning shadow destacado">MENU</a>
-              </div>
-            </div>
-            <div class="col-sm mb-3 bg-dark bg-gradient text-center">
-              <div class="card-body">
-                <h5 class="card-title"></h5>
-                <a href="./pages/contacto.html" class="btn btn-primary btn-lg btn-warning shadow destacado">CONTACTO</a>
-              </div>
-              <img src="imagenes/quienes 4.jpg" class="card-img-bottom rounded mb-3 shadow " alt="...">
+          <div class="col-sm mb-3 bg-dark bg-gradient text-center">
+            <img src="imagenes/fotomenu.jpg" class="card-img-top rounded mt-5 shadow" alt="cafedibujo">
+            <div class="card-body">
+              <h5 class="card-title destacado text-light">DISFRUTA DEL CAFÉ DEL MUNDO</h5>
+              <p class="card-text text-light">Veni a conocernos, disfrutá de la experiencia que tenemos para brindarte.
+                Y llevate
+                a
+                tu casa el mejor café del mundo. Descubrí por qué #SomosCafe</p>
+              <a href="./pages/menu.html" class="btn btn-primary btn-lg btn-warning shadow destacado">MENU</a>
             </div>
           </div>
+          <div class="col-sm mb-3 bg-dark bg-gradient text-center">
+            <div class="card-body">
+              <h5 class="card-title"></h5>
+              <a href="./pages/contacto.html" class="btn btn-primary btn-lg btn-warning shadow destacado">CONTACTO</a>
+            </div>
+            <img src="imagenes/quienes 4.jpg" class="card-img-bottom rounded mb-3 shadow" alt="...">
+          </div>
         </div>
+      </div>
     </section>
     <article>
       <div class="containterr">
