--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -8,8 +8,8 @@
     <title>THE COFFE HOUSE - CONTACTO</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="../scss/estilos.css">
-    <link rel="stylesheet" href="./css/fontello.css">
+        <link rel="stylesheet" href="../scss/estilos.css">
+        <link rel="stylesheet" href="../css/fontello.css">
     <link rel="shortcut icon" href="./imagenes/logo.jpg">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -37,7 +37,7 @@
                             <span class="navbar-toggler-icon"></span>
                         </button>
                         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                            <div class="navbar-nav">
+                            <div class="navbar-nav destacado">
                                 <a class="nav-link" href="../index.html">HOME</a>
                                 <a class="nav-link" href="menu.html">MENU</a>
                                 <a class="nav-link" href="nosotros.html">NOSOTROS</a>
@@ -68,17 +68,17 @@
 
                         <div class="form-floating mb-3 shadow">
                             <input type="text" class="form-control" id="floatingInput">
-                            <label for="floatingPassword">
+                            <label for="floatingTextarea">
                                 <p>Nombre</p>
                             </label>
                         </div>
                         <div class="form-floating mb-3 shadow">
                             <input type="number" class="form-control" id="floatingInput">
-                            <label for="floatingPassword p-2">Ingresá acá tu Telefono</label>
+                            <label for="floatingTextarea p-2">Ingresá acá tu Telefono</label>
                         </div>
                         <div class="form-floating mb-3 shadow">
                             <input type="email" class="form-control" id="floatingInput">
-                            <label for="floatingPassword">Ingresá acá tu Email</label>
+                            <label for="floatingTextarea">Ingresá acá tu Email</label>
                         </div>
                         <div class="form-floating mb-3 shadow">
                             <textarea class="form-control" placeholder="Leave a comment here"
@@ -86,7 +86,7 @@
                             <label for="floatingTextarea">Comments</label>
                         </div>
                         <div class="d-grid gap-2 col-6 mx-auto p-3">
-                            <button class="btn btn-primary btn-warning shadow" type="submit">Enviar!</button>
+                            <button class="btn btn-primary btn-lg btn-warning shadow destacado" type="submit">Enviar!</button>
                         </div>
 
                     </div>
