--- a/pages/menu.html
+++ b/pages/menu.html
@@ -8,8 +8,8 @@
   <title>THE COFFE HOUSE - Venta de Cafe - MENU</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-  <link rel="stylesheet" href="../scss/estilos.css">
-  <link rel="stylesheet" href="./css/fontello.css">
+    <link rel="stylesheet" href="../scss/estilos.css">
+    <link rel="stylesheet" href="../css/fontello.css">
   <link rel="shortcut icon" href="./imagenes/logo.jpg">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -36,7 +36,7 @@
               <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-              <div class="navbar-nav">
+              <div class="navbar-nav destacado">
                 <a class="nav-link" href="../index.html">HOME</a>
                 <a class="nav-link active" href="#">MENU</a>
                 <a class="nav-link" href="nosotros.html">NOSOTROS</a>
