--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -9,7 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="../scss/estilos.css">
-    <link rel="stylesheet" href="./css/fontello.css">
+    <link rel="stylesheet" href="../css/fontello.css">
     <link rel="shortcut icon" href="./imagenes/logo.jpg">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -38,7 +38,7 @@
                             <span class="navbar-toggler-icon"></span>
                         </button>
                         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                            <div class="navbar-nav">
+                            <div class="navbar-nav destacado">
                                 <a class="nav-link" href="../index.html">HOME</a>
                                 <a class="nav-link" href="menu.html">MENU</a>
                                 <a class="nav-link active" href="#">NOSOTROS</a>
@@ -54,7 +54,7 @@
 
     <main>
         <section>
-            <div class="container">
+            <div class="container-fluid">
                 <div class="row">
                     <div class="pricing-header p-3 pb-md-4 mx-auto text-center">
                         <h1 class="display-5 fw-normal">NOSOTROS</h1>
@@ -63,32 +63,23 @@
             </div>
         </section>
         <section>
-            <div class="cotainer">
+            <div class="container">
                 <div class="row">
-                    <div class="card bg-dark text-white">
-                        <img src="../imagenes/fotomenu.jpg" class="card-img" alt="...">
-                        <div class="card-img-overlay text-center">
-                            <h5
-                                class="card-title text-light bg-dark rounded bg-success p-2 text-light bg-opacity-75 shadow">
-                                ¿Por qué elegirnos?</h5>
-                            <p
-                                class="card-text text-light bg-dark rounded bg-success p-2 text-light bg-opacity-75 shadow">
-                                En
-                                Espresso tenemos un compromiso con la calidad, la seguridad y la responsabilidad, que
-                                concretamos mediante la implementación de estándares y programas que cumplen con la
-                                legislación vigente y requisitos de nuestros clientes. Nos preocupamos por planificar,
-                                invertir en <span class="destacado"> materiales y humanos, llevar adelante
-                                    procedimientos normalizados y
-                                    monitoreos permanentes, para que su empresa reciba el servicio final que
-                                    requiere.</span>
-                                Cuidamos hasta el más mínimo detalle, desde la selección óptima de nuestros proveedores
-                                e insumos hasta la estricta preparación de los productos en las máquinas expendedoras,
-                                con el objetivo de que el usuario tenga una opción variada y satisfactoria.</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
+                    <div class="card mb-3 rounded bg-dark bg-gradient p-2 m-1">
+                        <div class="card-body text-light text-center">
+                            <h5 class="card-title">¿Por qué elegirnos?</h5>
+                            <p class="card-text">En Espresso tenemos un compromiso con la calidad, la seguridad y la responsabilidad, que
+                              concretamos mediante la implementación de estándares y programas que cumplen con la
+                              legislación vigente y requisitos de nuestros clientes. Nos preocupamos por planificar,
+                              invertir en <span class="destacado"> materiales y humanos, llevar adelante procedimientos normalizados y
+                              monitoreos permanentes, para que su empresa reciba el servicio final que requiere.</span>
+                              Cuidamos hasta el más mínimo detalle, desde la selección óptima de nuestros proveedores
+                              e insumos hasta la estricta preparación de los productos en las máquinas expendedoras,
+                              con el objetivo de que el usuario tenga una opción variada y satisfactoria.</p></p>
+                        <img src="../imagenes/fotomenu.jpg" class="card-img-top rounded" alt="dibujoscafe">
 
+                        </div>
+                      </div>                   
         </section>
 
         <section>
