--- a/index.html
+++ b/index.html
@@ -94,11 +94,11 @@
       </div>
     </section>
 
-    <section class="container-fluid mt-3">
+    <section class="container-fluid mt-5">
       <div class="container">
         <div class="row">
           <div class="col-sm mb-3 bg-dark bg-gradient text-center">
-            <img src="imagenes/fotomenu.jpg" class="card-img-top rounded mt-5 shadow" alt="cafedibujo">
+            <img src="imagenes/fotomenu.jpg" class="card-img-top rounded mt-3 shadow" alt="cafedibujo">
             <div class="card-body">
               <h5 class="card-title destacado text-light">DISFRUTA DEL CAFÉ DEL MUNDO</h5>
               <p class="card-text text-light">Veni a conocernos, disfrutá de la experiencia que tenemos para brindarte.
@@ -131,7 +131,7 @@
   <footer">
     <div class="container-fluid">
       <div class="row">
-        <div class="card text-center bg-dark">
+        <div class="text-center bg-dark">
           <div class="card-body">
             <h5 class="card-title text-light">The Coffee © 2022</h5>
             <p class="card-text text-light"> • Cafe Fratelli Franqueadora LTDA • CNPJ: 31.520.143/0001-58</p>
