--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -19,7 +19,7 @@
 
 </head>
 
-<body class="bg-secondary bg-gradient">
+<body class="bg-secondary">
     <header>
         <div class="container-fluid">
             <div class="row">
@@ -61,11 +61,10 @@
                 </div>
             </div>
         </section>
-        <section>
-            <div class="container">
-                <div class="row">
-                    <div class="card mb-3 p-2 rounded bg-dark bg-gradient">
-
+    <section class="m-1">
+      <div class="container">
+        <div class="row">
+                    <div class="card p-1 rounded bg-dark bg-gradient">
                         <div class="form-floating mb-3 shadow">
                             <input type="text" class="form-control" id="floatingInput">
                             <label for="floatingTextarea">
@@ -109,9 +108,9 @@
         </section>
     </main>
     <footer">
-        <div class="container-fluid">
+        <div class="container-fluid position-absolute bottom-0 end-0">
             <div class="row">
-                <div class="card text-center bg-dark">
+                <div class="text-center bg-dark">
                     <div class="card-body">
                         <h5 class="card-title text-light">The Coffee © 2022</h5>
                         <p class="card-text text-light"> • Cafe Fratelli Franqueadora LTDA • CNPJ: 31.520.143/0001-58
