--- a/pages/media.html
+++ b/pages/media.html
@@ -8,8 +8,8 @@
     <title>THE COFFE HOUSE - MEDIA</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-        <link rel="stylesheet" href="../scss/estilos.css">
-        <link rel="stylesheet" href="../css/fontello.css">
+    <link rel="stylesheet" href="../scss/estilos.css">
+    <link rel="stylesheet" href="../css/fontello.css">
     <link rel="shortcut icon" href="./imagenes/logo.jpg">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -62,7 +62,7 @@
                 </div>
             </div>
         </section>
-        <section>
+        <section class="m-1">
             <div class="container">
                 <div class="row">
                     <div class="card mb-3 p-2 rounded bg-dark bg-gradient">
@@ -88,48 +88,47 @@
                         </div>
                     </div>
                 </section>
-                <div id="galeria" class="container rounded bg-dark bg-gradient  mb-3 ">
-                    <div class="row">
-                        <div class="col-lg-4">
-                            <img src="../imagenes/menu1.jpg" alt="" class="rounded shadow">
-                        </div>
-                        <div class="col-lg-4">
-                            <img src="../imagenes/DALEQUEVA.jpg" alt="" class="rounded shadow">
-                        </div>
-                        <div class="col-lg-4">
-                            <img src="../imagenes/DALEQUEVA1.jpg" alt="" class="rounded shadow">
-                        </div>
-                        <div class="col-lg-4">
-                            <img src="../imagenes/DALEQUEVA2.jpg" alt="" class="rounded shadow">
-                        </div>
-                        <div class="col-lg-4">
-                            <img src="../imagenes/menu1.jpg" alt="" class="rounded shadow">
-                        </div>
-                        <div class="col-lg-4">
-                            <img src="../imagenes/DALEQUEVA.jpg" alt="" class="rounded shadow">
-                        </div>
+                <section>
+                    <div id="galeria" class="container rounded bg-dark bg-gradient  mb-3 ">
+                        <div class="row">
+                            <div class="col-lg-4">
+                                <img src="../imagenes/menu1.jpg" alt="" class="rounded shadow">
+                            </div>
+                            <div class="col-lg-4">
+                                <img src="../imagenes/DALEQUEVA.jpg" alt="" class="rounded shadow">
+                            </div>
+                            <div class="col-lg-4">
+                                <img src="../imagenes/DALEQUEVA1.jpg" alt="" class="rounded shadow">
+                            </div>
+                            <div class="col-lg-4">
+                                <img src="../imagenes/DALEQUEVA2.jpg" alt="" class="rounded shadow">
+                            </div>
+                            <div class="col-lg-4">
+                                <img src="../imagenes/menu1.jpg" alt="" class="rounded shadow">
+                            </div>
+                            <div class="col-lg-4">
+                                <img src="../imagenes/DALEQUEVA.jpg" alt="" class="rounded shadow">
+                            </div>
 
-            </section>
+                </section>
 
 
-        </section>
-
-        <section>
-            <article>
-                <div class="containterr">
-                    <div class="redes">
-                        <a href="https://www.facebook.com/" target="blanc" class="icon-facebook"></a>
-                        <a href="https://www.instagram.com/" target="blanc" class="icon-instagram"></a>
-                        <a href="https://www.whatsapp.com/" target="blanc" class="icon-whatsapp"></a>
-                    </div>
-                </div>
-            </article>
-        </section>
+                <section>
+                    <article>
+                        <div class="containterr">
+                            <div class="redes">
+                                <a href="https://www.facebook.com/" target="blanc" class="icon-facebook"></a>
+                                <a href="https://www.instagram.com/" target="blanc" class="icon-instagram"></a>
+                                <a href="https://www.whatsapp.com/" target="blanc" class="icon-whatsapp"></a>
+                            </div>
+                        </div>
+                    </article>
+                </section>
     </main>
     <footer">
         <div class="container-fluid">
             <div class="row">
-                <div class="card text-center bg-dark">
+                <div class="text-center bg-dark">
                     <div class="card-body">
                         <h5 class="card-title text-light">The Coffee © 2022</h5>
                         <p class="card-text text-light"> • Cafe Fratelli Franqueadora LTDA • CNPJ: 31.520.143/0001-58
