--- a/pages/menu.html
+++ b/pages/menu.html
@@ -126,7 +126,7 @@
   <footer">
     <div class="container-fluid mt-4">
       <div class="row">
-        <div class="card text-center bg-dark">
+        <div class="text-center bg-dark">
           <div class="card-body">
             <h5 class="card-title text-light">The Coffee © 2022</h5>
             <p class="card-text text-light"> • Cafe Fratelli Franqueadora LTDA • CNPJ: 31.520.143/0001-58</p>
