--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -62,10 +62,11 @@
                 </div>
             </div>
         </section>
-        <section>
-            <div class="container">
-                <div class="row">
-                    <div class="card mb-3 rounded bg-dark bg-gradient p-2 m-1">
+
+            <section class="m-1">
+                <div class="container">
+                  <div class="row">
+                    <div class="col-sm mb-3 bg-dark bg-gradient text-center">
                         <div class="card-body text-light text-center">
                             <h5 class="card-title">¿Por qué elegirnos?</h5>
                             <p class="card-text">En Espresso tenemos un compromiso con la calidad, la seguridad y la responsabilidad, que
@@ -97,7 +98,7 @@
     <footer>
         <div class="container-fluid">
             <div class="row">
-                <div class="card text-center bg-dark">
+                <div class="text-center bg-dark">
                     <div class="card-body">
                         <h5 class="card-title text-light">The Coffee © 2022</h5>
                         <p class="card-text text-light"> • Cafe Fratelli Franqueadora LTDA • CNPJ: 31.520.143/0001-58
